--- a/app/_tictactoe.scss
+++ b/app/_tictactoe.scss
@@ -46,7 +46,7 @@ button {
 				border-radius: 0;
 				border: none;
 				background: #000;
-				font-size: 4em;
+				font-size: 5em;
 			}
 		}
 	}
@@ -63,14 +63,14 @@ button {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 20px 0;
+	padding: 10px 0;
 	width: 300px;
 	font-size: 1.5em;
 }
 
 .new-game-btn {
-	width: 300px;
-	height: 100px;
+	width: 200px;
+	height: 75px;
 	font-size: 2em;
 	background: black;
 	border: 2px solid #fff;
@@ -102,21 +102,21 @@ button {
 
 @media (min-width: 768px) {
 	header {
-		font-size: 1.2em;
+		font-size: 1em;
 	}
 	.container .row .box {
-		width: 200px;
-		height: 200px;
+		width: 125px;
+		height: 125px;
 
 		button {
-			font-size: 7em;
+			font-size: 6em;
 		}
 	}
 
 	.player-scores,
-	.player-scores-titles,
-	.new-game-btn {
-		width: 600px;
-		font-size: 3em;
+	.player-scores-titles {
+		width: 300px;
+		font-size: 1.75em;
+		padding: 10px 0;
 	}
 }
